sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
{getValeur(i)=getValeur(i-1);
 ^AlgInsertionSort:10: error: reassignment to val
i=i-1;}
 ^