sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int = 0;

for(i <- 0 to (getNombreValeurs()-1))
{
while(i>0 & getValeur(i-1)>getValeur(i))
{getValeur(i)=getValeur(i-1);
i=i-1;}
}
	
	
	
	
}
 

